Initial backport to 1.16.5 (No structures and rendering issues)