@@ -10,30 +10,31 @@ import com.cerbon.bosses_of_mass_destruction.entity.ai.action.IActionWithCooldow
 import com.cerbon.bosses_of_mass_destruction.sound.BMDSounds;
 import com.cerbon.bosses_of_mass_destruction.util.BMDUtils;
 import com.cerbon.bosses_of_mass_destruction.util.VanillaCopiesServer;
-import net.minecraft.server.level.ServerLevel;
-import net.minecraft.sounds.SoundSource;
-import net.minecraft.world.entity.Entity;
-import net.minecraft.world.entity.LivingEntity;
-import net.minecraft.world.entity.ai.attributes.Attributes;
-import net.minecraft.world.level.ClipContext;
-import net.minecraft.world.phys.AABB;
-import net.minecraft.world.phys.BlockHitResult;
-import net.minecraft.world.phys.HitResult;
-import net.minecraft.world.phys.Vec3;
+import net.minecraft.world.server.ServerWorld;
+import net.minecraft.util.SoundCategory;
+import net.minecraft.entity.Entity;
+import net.minecraft.entity.LivingEntity;
+import net.minecraft.entity.ai.attributes.Attributes;
+import net.minecraft.util.math.RayTraceContext;
+import net.minecraft.util.math.AxisAlignedBB;
+import net.minecraft.util.math.BlockRayTraceResult;
+import net.minecraft.util.math.RayTraceResult;
+import net.minecraft.util.math.vector.Vector3d;
 
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 
 public class LaserAction implements IActionWithCooldown {
     private final GauntletEntity entity;
     private final EventScheduler eventScheduler;
     private final Supplier<Boolean> cancelAction;
-    private final ServerLevel serverLevel;
+    private final ServerWorld serverLevel;
 
     public static final int laserLagTicks = 8;
 
-    public LaserAction(GauntletEntity entity, EventScheduler eventScheduler, Supplier<Boolean> cancelAction, ServerLevel serverLevel) {
+    public LaserAction(GauntletEntity entity, EventScheduler eventScheduler, Supplier<Boolean> cancelAction, ServerWorld serverLevel) {
         this.entity = entity;
         this.eventScheduler = eventScheduler;
         this.cancelAction = cancelAction;
@@ -45,9 +46,9 @@ public class LaserAction implements IActionWithCooldown {
         LivingEntity target = entity.getTarget();
         if (target == null) return 40;
 
-        HistoricalData<Vec3> laserRenderPositions = new HistoricalData<>(Vec3.ZERO, laserLagTicks);
+        HistoricalData<Vector3d> laserRenderPositions = new HistoricalData<>(Vector3d.ZERO, laserLagTicks);
 
-        BMDUtils.playSound(serverLevel, entity.position(), BMDSounds.GAUNTLET_LASER_CHARGE.get(), SoundSource.HOSTILE, 3.0f, 1.0f, 64, null);
+        BMDUtils.playSound(serverLevel, entity.position(), BMDSounds.GAUNTLET_LASER_CHARGE.get(), SoundCategory.HOSTILE, 3.0f, 1.0f, 64, null);
 
         TimedEvent sendStartToClient = new TimedEvent(
                 () -> entity.getEntityData().set(GauntletEntity.laserTarget, target.getId()),
@@ -80,31 +81,31 @@ public class LaserAction implements IActionWithCooldown {
         return 120;
     }
 
-    private void applyLaser(HistoricalData<Vec3> laserRenderPositions){
-        Vec3 targetLaserPos = laserRenderPositions.getAll().get(0);
-        Vec3 extendedLaserPos = extendLaser(entity, targetLaserPos);
-        BlockHitResult result = entity.level.clip(
-                new ClipContext(
+    private void applyLaser(HistoricalData<Vector3d> laserRenderPositions){
+        Vector3d targetLaserPos = laserRenderPositions.getAll().get(0);
+        Vector3d extendedLaserPos = extendLaser(entity, targetLaserPos);
+        BlockRayTraceResult result = entity.level.clip(
+                new RayTraceContext(
                         MobUtils.eyePos(entity),
                         extendedLaserPos,
-                        ClipContext.Block.COLLIDER,
-                        ClipContext.Fluid.NONE,
+                        RayTraceContext.BlockMode.COLLIDER,
+                        RayTraceContext.FluidMode.NONE,
                         entity
                 )
         );
 
-        if (result.getType() == HitResult.Type.BLOCK){
+        if (result.getType() == RayTraceResult.Type.BLOCK){
             if (entity.tickCount % 2 == 0)
-                VanillaCopiesServer.destroyBlocks(entity, new AABB(result.getLocation(), result.getLocation()).inflate(0.1));
+                VanillaCopiesServer.destroyBlocks(entity, new AxisAlignedBB(result.getLocation(), result.getLocation()).inflate(0.1));
 
             applyLaserToEntities(result.getLocation());
         }else
             applyLaserToEntities(extendedLaserPos);
     }
 
-    private void applyLaserToEntities(Vec3 laserTargetPos){
+    private void applyLaserToEntities(Vector3d laserTargetPos){
         List<LivingEntity> entitiesHit = BMDUtils.findEntitiesInLine(entity.level, MobUtils.eyePos(entity), laserTargetPos, entity)
-                .stream().filter(LivingEntity.class::isInstance).map(entity1 -> (LivingEntity) entity1).toList();
+                .stream().filter(LivingEntity.class::isInstance).map(entity1 -> (LivingEntity) entity1).collect(Collectors.toList());
 
         for (LivingEntity hitEntity : entitiesHit){
             double originalAttack = entity.getAttributeValue(Attributes.ATTACK_DAMAGE);
@@ -114,7 +115,7 @@ public class LaserAction implements IActionWithCooldown {
         }
     }
 
-    public static Vec3 extendLaser(Entity entity, Vec3 laserTargetPos){
+    public static Vector3d extendLaser(Entity entity, Vector3d laserTargetPos){
         return MathUtils.unNormedDirection(MobUtils.eyePos(entity), laserTargetPos).normalize().scale(30.0).add(MobUtils.eyePos(entity));
     }
 }
