@@ -12,12 +12,12 @@ import com.cerbon.bosses_of_mass_destruction.packet.BMDPacketHandler;
 import com.cerbon.bosses_of_mass_destruction.packet.custom.PlaceS2CPacket;
 import com.cerbon.bosses_of_mass_destruction.sound.BMDSounds;
 import com.cerbon.bosses_of_mass_destruction.util.BMDUtils;
-import net.minecraft.core.BlockPos;
-import net.minecraft.server.level.ServerLevel;
-import net.minecraft.sounds.SoundSource;
-import net.minecraft.world.level.Level;
-import net.minecraft.world.level.block.Blocks;
-import net.minecraft.world.phys.Vec3;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.world.server.ServerWorld;
+import net.minecraft.util.SoundCategory;
+import net.minecraft.world.World;
+import net.minecraft.block.Blocks;
+import net.minecraft.util.math.vector.Vector3d;
 
 import java.util.Collections;
 import java.util.List;
@@ -30,7 +30,7 @@ public class BlossomAction implements IActionWithCooldown {
     private final EventScheduler eventScheduler;
     private final Supplier<Boolean> shouldCancel;
 
-    private final List<Vec3> blossomPositions = Stream.of(
+    private final List<Vector3d> blossomPositions = Stream.of(
             VecUtils.xAxis,
             VecUtils.zAxis,
             VecUtils.xAxis.reverse(),
@@ -39,7 +39,7 @@ public class BlossomAction implements IActionWithCooldown {
             VecUtils.xAxis.add(VecUtils.zAxis.reverse()),
             VecUtils.xAxis.reverse().add(VecUtils.zAxis),
             VecUtils.xAxis.reverse().add(VecUtils.zAxis.reverse())
-    ).map(vec3 -> vec3.normalize().scale(15.0)).toList();
+    ).map(vec3 -> vec3.normalize().scale(15.0)).collect(Collectors.toList());
 
     public BlossomAction(VoidBlossomEntity entity, EventScheduler eventScheduler, Supplier<Boolean> shouldCancel) {
         this.entity = entity;
@@ -49,8 +49,8 @@ public class BlossomAction implements IActionWithCooldown {
 
     @Override
     public int perform() {
-        Level level = entity.level;
-        if (!(level instanceof ServerLevel)) return 80;
+        World level = entity.level;
+        if (!(level instanceof ServerWorld)) return 80;
 
         eventScheduler.addEvent(
                 new EventSeries(
@@ -66,11 +66,11 @@ public class BlossomAction implements IActionWithCooldown {
                         )
                 )
         );
-        placeBlossoms((ServerLevel) level);
+        placeBlossoms((ServerWorld) level);
         return 120;
     }
 
-    private void placeBlossoms(ServerLevel level){
+    private void placeBlossoms(ServerWorld level){
         List<BlockPos> positions = blossomPositions.stream()
                 .map(pos -> new BlockPos(pos.add(entity.position())))
                 .collect(Collectors.toList());
@@ -86,7 +86,7 @@ public class BlossomAction implements IActionWithCooldown {
         else
             protectedPositions = 0;
 
-        BMDUtils.playSound(level, entity.position(), BMDSounds.SPIKE_WAVE_INDICATOR.get(), SoundSource.HOSTILE, 2.0f, 0.7f, 64.0, null);
+        BMDUtils.playSound(level, entity.position(), BMDSounds.SPIKE_WAVE_INDICATOR.get(), SoundCategory.HOSTILE, 2.0f, 0.7f, 64.0, null);
 
         for (int i = 0; i < 8; i++){
             int i1 = i;
@@ -94,10 +94,10 @@ public class BlossomAction implements IActionWithCooldown {
                     new TimedEvent(
                             () -> {
                                 BlockPos blossomPos = positions.get(i1);
-                                level.setBlockAndUpdate(blossomPos, Blocks.MOSS_BLOCK.defaultBlockState());
+                                level.setBlockAndUpdate(blossomPos, Blocks.GRASS_BLOCK.defaultBlockState());
                                 level.setBlockAndUpdate(blossomPos.above(), BMDBlocks.VOID_BLOSSOM.get().defaultBlockState());
                                 BMDPacketHandler.sendToAllPlayersTrackingChunk(new PlaceS2CPacket(VecUtils.asVec3(blossomPos).add(VecUtils.unit.scale(0.5))), level, entity.position());
-                                BMDUtils.playSound(level, VecUtils.asVec3(blossomPos), BMDSounds.PETAL_BLADE.get(), SoundSource.HOSTILE, 1.0f, BMDUtils.randomPitch(entity.getRandom()), 64, null);
+                                BMDUtils.playSound(level, VecUtils.asVec3(blossomPos), BMDSounds.PETAL_BLADE.get(), SoundCategory.HOSTILE, 1.0f, BMDUtils.randomPitch(entity.getRandom()), 64, null);
 
                                 if(i1 < protectedPositions) {
                                     for (int x = -1; x <= 1; x++) {
