@@ -14,40 +14,33 @@ import com.cerbon.bosses_of_mass_destruction.entity.custom.lich.LichEntity;
 import com.cerbon.bosses_of_mass_destruction.entity.spawn.*;
 import com.cerbon.bosses_of_mass_destruction.sound.BMDSounds;
 import com.cerbon.bosses_of_mass_destruction.util.BMDConstants;
-import com.cerbon.bosses_of_mass_destruction.structure.BMDStructures;
 import com.cerbon.bosses_of_mass_destruction.util.BMDUtils;
-import net.minecraft.ChatFormatting;
-import net.minecraft.core.BlockPos;
-import net.minecraft.nbt.CompoundTag;
-import net.minecraft.network.chat.Component;
-import net.minecraft.network.chat.TranslatableComponent;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.server.level.ServerLevel;
-import net.minecraft.sounds.SoundEvents;
-import net.minecraft.sounds.SoundSource;
-import net.minecraft.stats.Stats;
-import net.minecraft.world.InteractionHand;
-import net.minecraft.world.InteractionResult;
-import net.minecraft.world.InteractionResultHolder;
-import net.minecraft.world.entity.player.Player;
-import net.minecraft.world.item.Item;
-import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.TooltipFlag;
-import net.minecraft.world.item.context.UseOnContext;
-import net.minecraft.world.level.ClipContext;
-import net.minecraft.world.level.Level;
-import net.minecraft.world.level.block.Rotation;
-import net.minecraft.world.level.block.state.BlockState;
-import net.minecraft.world.phys.BlockHitResult;
-import net.minecraft.world.phys.HitResult;
-import net.minecraft.world.phys.Vec3;
+import com.google.common.collect.Lists;
+import net.minecraft.block.BlockState;
+import net.minecraft.client.util.ITooltipFlag;
+import net.minecraft.item.Item;
+import net.minecraft.item.ItemStack;
+import net.minecraft.item.ItemUseContext;
+import net.minecraft.nbt.CompoundNBT;
+import net.minecraft.util.ActionResultType;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.util.Rotation;
+import net.minecraft.util.SoundCategory;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.math.vector.Vector3d;
+import net.minecraft.util.text.ITextComponent;
+import net.minecraft.util.text.TextFormatting;
+import net.minecraft.util.text.TranslationTextComponent;
+import net.minecraft.world.World;
+import net.minecraft.world.server.ServerWorld;
 import net.minecraftforge.api.distmarker.Dist;
 import net.minecraftforge.api.distmarker.OnlyIn;
-import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
 
+import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class SoulStarItem extends Item {
 
@@ -56,20 +49,20 @@ public class SoulStarItem extends Item {
     }
 
     @Override
-    public void appendHoverText(@NotNull ItemStack stack, @Nullable Level level, List<Component> tooltipComponents, @NotNull TooltipFlag isAdvanced) {
-        tooltipComponents.add(new TranslatableComponent("item.bosses_of_mass_destruction.soul_star.tooltip").withStyle(ChatFormatting.DARK_GRAY));
+    public void appendHoverText(@Nonnull ItemStack stack, @Nullable World level, List<ITextComponent> tooltipComponents, @Nonnull ITooltipFlag isAdvanced) {
+        tooltipComponents.add(new TranslationTextComponent("item.bosses_of_mass_destruction.soul_star.tooltip").withStyle(TextFormatting.DARK_GRAY));
     }
 
     @Override
-    public @NotNull InteractionResult useOn(UseOnContext context) {
-        Level level = context.getLevel();
+    public @Nonnull ActionResultType useOn(ItemUseContext context) {
+        World level = context.getLevel();
         BlockPos blockPos = context.getClickedPos();
         BlockState blockState = level.getBlockState(blockPos);
 
         if (blockState.is(BMDBlocks.CHISELED_STONE_ALTAR.get()) && !blockState.getValue(ChiseledStoneAltarBlock.lit)){
             if (level.isClientSide()){
                 clientSoulStartPlace(blockPos);
-                return InteractionResult.SUCCESS;
+                return ActionResultType.SUCCESS;
             }else {
                 serverSoulStarPlace(blockState, level, blockPos, context);
                 level.playSound(
@@ -78,22 +71,22 @@ public class SoulStarItem extends Item {
                         context.getClickLocation().y,
                         context.getClickLocation().z,
                         BMDSounds.SOUL_STAR.get(),
-                        SoundSource.NEUTRAL,
+                        SoundCategory.NEUTRAL,
                         0.5f,
                         BMDUtils.randomPitch(level.random)
                 );
-                return InteractionResult.PASS;
+                return ActionResultType.PASS;
             }
         }
-        return InteractionResult.PASS;
+        return ActionResultType.PASS;
     }
 
-    private void serverSoulStarPlace(BlockState blockState, Level level, BlockPos blockPos, UseOnContext context){
+    private void serverSoulStarPlace(BlockState blockState, World level, BlockPos blockPos, ItemUseContext context){
         BlockState blockState2 = blockState.setValue(ChiseledStoneAltarBlock.lit, true);
         level.setBlock(blockPos, blockState2, 2);
         context.getItemInHand().shrink(1);
-        List<BlockPos> quarterAltarPosition = List.of(new BlockPos(12, 0, 0), new BlockPos(6, 0, 6));
-        List<BlockPos> allPotentialAltarPositions = Arrays.stream(Rotation.values()).flatMap(rot -> quarterAltarPosition.stream().map(blockPos1 -> blockPos1.rotate(rot))).toList();
+        List<BlockPos> quarterAltarPosition = Lists.newArrayList(new BlockPos(12, 0, 0), new BlockPos(6, 0, 6));
+        List<BlockPos> allPotentialAltarPositions = Arrays.stream(Rotation.values()).flatMap(rot -> quarterAltarPosition.stream().map(blockPos1 -> blockPos1.rotate(rot))).collect(Collectors.toList());
         int numberOfAltarsFilled = (int) allPotentialAltarPositions.stream().filter(pos -> {
                     BlockState state = level.getBlockState(blockPos.offset(pos));
                     return state.hasProperty(ChiseledStoneAltarBlock.lit) && state.getValue(ChiseledStoneAltarBlock.lit);
@@ -121,71 +114,74 @@ public class SoulStarItem extends Item {
 
     @OnlyIn(Dist.CLIENT)
     private void clientSoulStartPlace(BlockPos blockPos){
-        Vec3 centralPos = VecUtils.asVec3(blockPos).add(new Vec3(0.5, 1.2, 0.5));
+        Vector3d centralPos = VecUtils.asVec3(blockPos).add(new Vector3d(0.5, 1.2, 0.5));
         MathUtils.circleCallback(0.5, 15, VecUtils.yAxis, vec3 -> {
-            Vec3 particleVel = VecUtils.yAxis.scale(0.03 + RandomUtils.randomDouble(0.01));
-            Vec3 particlePos = centralPos.add(vec3);
+            Vector3d particleVel = VecUtils.yAxis.scale(0.03 + RandomUtils.randomDouble(0.01));
+            Vector3d particlePos = centralPos.add(vec3);
             ChiseledStoneAltarBlock.Particles.blueFireParticleFactory.build(particlePos, particleVel);
         });
     }
 
-    @Override
-    public @NotNull InteractionResultHolder<ItemStack> use(@NotNull Level level, Player player, @NotNull InteractionHand usedHand) {
-        ItemStack itemStack = player.getItemInHand(usedHand);
-        BlockHitResult hitResult = getPlayerPOVHitResult(level, player, ClipContext.Fluid.NONE);
+    //TODO: Fix here
+//    @Override
+//    public @Nonnull ActionResult<ItemStack> use(@Nonnull World level, PlayerEntity player, @Nonnull Hand usedHand) {
+//        ItemStack itemStack = player.getItemInHand(usedHand);
+//        BlockRayTraceResult hitResult = getPlayerPOVHitResult(level, player, RayTraceContext.FluidMode.NONE);
+//
+//        if (hitResult.getType() == RayTraceResult.Type.BLOCK && level.getBlockState(hitResult.getBlockPos()).is(BMDBlocks.CHISELED_STONE_ALTAR.get())){
+//            return ActionResult.pass(itemStack);
+//
+//        }else {
+//            player.startUsingItem(usedHand);
+//            if (level instanceof ServerWorld) {
+//                ServerWorld serverLevel = (ServerWorld) level;
+//
+//                BlockPos blockPos = serverLevel.findNearestMapFeature(BMDStructures.SOUL_STAR_STRUCTURE_KEY, player.blockPosition(), 100, false);
+//                if (blockPos != null){
+//                    SoulStarEntity entity = new SoulStarEntity(level, player.getX(), player.getEyeY(), player.getZ());
+//                    entity.setItem(itemStack);
+//                    entity.initTargetPos(blockPos);
+//                    level.addFreshEntity(entity);
+//                    level.playSound(
+//                            null,
+//                            player.getX(),
+//                            player.getY(),
+//                            player.getZ(),
+//                            SoundEvents.ENDER_EYE_LAUNCH,
+//                            SoundCategory.NEUTRAL,
+//                            0.5f,
+//                            0.4f / level.getRandom().nextFloat() * 0.4f + 0.8f
+//                    );
+//
+//                    if (!player.abilities.instabuild)
+//                        itemStack.shrink(1);
+//
+//                    player.awardStat(Stats.ITEM_USED.get(this));
+//                    player.swing(usedHand, true);
+//                    return ActionResult.success(itemStack);
+//                }
+//                return ActionResult.pass(itemStack);
+//            }
+//            return ActionResult.consume(itemStack);
+//        }
+//    }
 
-        if (hitResult.getType() == HitResult.Type.BLOCK && level.getBlockState(hitResult.getBlockPos()).is(BMDBlocks.CHISELED_STONE_ALTAR.get())){
-            return InteractionResultHolder.pass(itemStack);
-
-        }else {
-            player.startUsingItem(usedHand);
-            if (level instanceof ServerLevel serverLevel){
-                BlockPos blockPos = serverLevel.findNearestMapFeature(BMDStructures.SOUL_STAR_STRUCTURE_KEY, player.blockPosition(), 100, false);
-                if (blockPos != null){
-                    SoulStarEntity entity = new SoulStarEntity(level, player.getX(), player.getEyeY(), player.getZ());
-                    entity.setItem(itemStack);
-                    entity.initTargetPos(blockPos);
-                    level.addFreshEntity(entity);
-                    level.playSound(
-                            null,
-                            player.getX(),
-                            player.getY(),
-                            player.getZ(),
-                            SoundEvents.ENDER_EYE_LAUNCH,
-                            SoundSource.NEUTRAL,
-                            0.5f,
-                            0.4f / level.getRandom().nextFloat() * 0.4f + 0.8f
-                    );
-
-                    if (!player.getAbilities().instabuild)
-                        itemStack.shrink(1);
-
-                    player.awardStat(Stats.ITEM_USED.get(this));
-                    player.swing(usedHand, true);
-                    return InteractionResultHolder.success(itemStack);
-                }
-                return InteractionResultHolder.pass(itemStack);
-            }
-            return InteractionResultHolder.consume(itemStack);
-        }
-    }
-
-    public void spawnLich(BlockPos blockPos, Level level){
-        CompoundTag compoundTag = new CompoundTag();
+    public void spawnLich(BlockPos blockPos, World level){
+        CompoundNBT compoundTag = new CompoundNBT();
         compoundTag.putString("id", new ResourceLocation(BMDConstants.MOD_ID, "lich").toString());
 
-        Vec3 spawnPos = VecUtils.asVec3(blockPos);
+        Vector3d spawnPos = VecUtils.asVec3(blockPos);
         boolean spawned = new MobPlacementLogic(
                 new HorizontalRangedSpawnPosition(spawnPos, 15.0, 30.0, new ModRandom()),
                 new CompoundTagEntityProvider(compoundTag, level),
                 new MobEntitySpawnPredicate(level),
-                new SimpleMobSpawner((ServerLevel) level)
+                new SimpleMobSpawner((ServerWorld) level)
         ).tryPlacement(200);
 
         if (!spawned){
             LichEntity entity = BMDEntities.LICH.get().create(level);
             if (entity != null){
-                Vec3 defaultSpawnPos = spawnPos.add(VecUtils.xAxis.scale(5.0));
+                Vector3d defaultSpawnPos = spawnPos.add(VecUtils.xAxis.scale(5.0));
                 entity.setPacketCoordinates(defaultSpawnPos.x, defaultSpawnPos.y, defaultSpawnPos.z);
                 entity.absMoveTo(defaultSpawnPos.x, defaultSpawnPos.y, defaultSpawnPos.z);
                 level.addFreshEntity(entity);
