@@ -2,17 +2,18 @@ package com.cerbon.bosses_of_mass_destruction.packet.custom;
 
 import com.cerbon.bosses_of_mass_destruction.entity.custom.gauntlet.GauntletEntity;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.multiplayer.ClientLevel;
-import net.minecraft.network.FriendlyByteBuf;
-import net.minecraft.world.entity.Entity;
-import net.minecraft.world.entity.player.Player;
+import net.minecraft.client.world.ClientWorld;
+import net.minecraft.entity.Entity;
+import net.minecraft.entity.player.PlayerEntity;
+import net.minecraft.network.PacketBuffer;
 import net.minecraftforge.api.distmarker.Dist;
 import net.minecraftforge.fml.DistExecutor;
-import net.minecraftforge.network.NetworkEvent;
+import net.minecraftforge.fml.network.NetworkEvent;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 
 public class BlindnessS2CPacket {
     private final int entityId;
@@ -23,12 +24,12 @@ public class BlindnessS2CPacket {
         this.playerIds = playerIds;
     }
 
-    public BlindnessS2CPacket(FriendlyByteBuf buf) {
+    public BlindnessS2CPacket(PacketBuffer buf) {
         this.entityId = buf.readInt();
         this.playerIds = buf.readVarIntArray();
     }
 
-    public void write(FriendlyByteBuf buf){
+    public void write(PacketBuffer buf){
         buf.writeInt(entityId);
         buf.writeVarIntArray(playerIds);
     }
@@ -37,16 +38,16 @@ public class BlindnessS2CPacket {
         NetworkEvent.Context ctx = supplier.get();
         ctx.enqueueWork(() -> {
             Minecraft client = Minecraft.getInstance();
-            ClientLevel level = client.level;
+            ClientWorld level = client.level;
             if (level == null) return;
 
             DistExecutor.unsafeRunWhenOn(Dist.CLIENT, () -> () -> client.execute(() -> {
                 Entity entity = level.getEntity(entityId);
-                List<Player> players = Arrays.stream(playerIds)
+                List<PlayerEntity> players = Arrays.stream(playerIds)
                         .mapToObj(level::getEntity)
-                        .filter(id -> id instanceof Player)
-                        .map(id -> (Player) id)
-                        .toList();
+                        .filter(id -> id instanceof PlayerEntity)
+                        .map(id -> (PlayerEntity) id)
+                        .collect(Collectors.toList());
 
                 if (entity instanceof GauntletEntity)
                     ((GauntletEntity) entity).clientBlindnessHandler.handlePlayerEffects(players);
